{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 110,
  "lineage": "9a9b242f-278c-dd9c-6ad2-754b93165a08",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web_port_80_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011528291803:listener/app/week4-prod-web-alb/867df50cfccb5623/46740f2ef3226442",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528291803:listener/app/week4-prod-web-alb/867df50cfccb5623/46740f2ef3226442",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:011528291803:loadbalancer/app/week4-prod-web-alb/867df50cfccb5623",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_alb",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.bastion-public-b",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:network-acl/acl-0378f7d35934218da",
            "default_network_acl_id": "acl-0378f7d35934218da",
            "egress": [],
            "id": "acl-0378f7d35934218da",
            "ingress": [],
            "owner_id": "011528291803",
            "subnet_ids": [
              "subnet-0384026055442cc6a",
              "subnet-07555cdcb22206907",
              "subnet-09195698c86761de5",
              "subnet-0a9b7214dc3910b17"
            ],
            "tags": {
              "Name": "default_nacl_do_not_use"
            },
            "tags_all": {
              "Name": "default_nacl_do_not_use"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:route-table/rtb-00210f56fa78fa247",
            "default_route_table_id": "rtb-00210f56fa78fa247",
            "id": "rtb-00210f56fa78fa247",
            "owner_id": "011528291803",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "default_route_table_do_not_use"
            },
            "tags_all": {
              "Name": "default_route_table_do_not_use"
            },
            "timeouts": null,
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:security-group/sg-0423214cee5036154",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0423214cee5036154",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "011528291803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default_security_group_do_not_use"
            },
            "tags_all": {
              "Name": "default_security_group_do_not_use"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004a3b6e618e3a6d2",
            "domain": "vpc",
            "id": "eipalloc-004a3b6e618e3a6d2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-196-218-199.compute-1.amazonaws.com",
            "public_ip": "44.196.218.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_gateway_eip"
            },
            "tags_all": {
              "Name": "nat_gateway_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:internet-gateway/igw-01ba38c310378826b",
            "id": "igw-01ba38c310378826b",
            "owner_id": "011528291803",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011528291803:loadbalancer/app/week4-prod-web-alb/867df50cfccb5623",
            "arn_suffix": "app/week4-prod-web-alb/867df50cfccb5623",
            "desync_mitigation_mode": "defensive",
            "dns_name": "week4-prod-web-alb-284136134.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528291803:loadbalancer/app/week4-prod-web-alb/867df50cfccb5623",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "week4-prod-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-040c7e4155894b6b7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07555cdcb22206907"
              },
              {
                "subnet_id": "subnet-0a9b7214dc3910b17"
              }
            ],
            "subnets": [
              "subnet-07555cdcb22206907",
              "subnet-0a9b7214dc3910b17"
            ],
            "vpc_id": "vpc-046d83044277b9153",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web-elb-security-group",
            "aws_subnet.bastion-public-b",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011528291803:targetgroup/week4-prod-app-tg/48c5a5736f7377aa",
            "arn_suffix": "targetgroup/week4-prod-app-tg/48c5a5736f7377aa",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528291803:targetgroup/week4-prod-app-tg/48c5a5736f7377aa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "week4-prod-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-046d83044277b9153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004a3b6e618e3a6d2",
            "association_id": "eipassoc-0ae0a63d09cc2e8c7",
            "connectivity_type": "public",
            "id": "nat-02aab4f134a2a31ed",
            "network_interface_id": "eni-07f2543ca6f51f4b7",
            "private_ip": "10.0.0.150",
            "public_ip": "44.196.218.199",
            "subnet_id": "subnet-0a9b7214dc3910b17",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:network-acl/acl-08f5974d373be3b6b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08f5974d373be3b6b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "011528291803",
            "subnet_ids": [
              "subnet-0725cb0e789143616",
              "subnet-09195698c86761de5"
            ],
            "tags": {
              "Name": "week-app-private-nacl"
            },
            "tags_all": {
              "Name": "week-app-private-nacl"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.app-private-b",
            "aws_subnet.app-private-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "bastion-public-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:network-acl/acl-05c94a2a9bd3205d8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05c94a2a9bd3205d8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "011528291803",
            "subnet_ids": [
              "subnet-07555cdcb22206907"
            ],
            "tags": {
              "Name": "week4-bastion-public-nacl"
            },
            "tags_all": {
              "Name": "week4-bastion-public-nacl"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.bastion-public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:network-acl/acl-0390c89199e8c7cf0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0390c89199e8c7cf0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "011528291803",
            "subnet_ids": [
              "subnet-0a9b7214dc3910b17"
            ],
            "tags": {
              "Name": "week4-public-nacl"
            },
            "tags_all": {
              "Name": "week4-public-nacl"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "web_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:network-acl/acl-043b93076da4f85cb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-043b93076da4f85cb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "011528291803",
            "subnet_ids": [
              "subnet-0252b9f0bae05f5e1",
              "subnet-0384026055442cc6a"
            ],
            "tags": {
              "Name": "week4-web-private-nacl"
            },
            "tags_all": {
              "Name": "week4-web-private-nacl"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.web-private-b",
            "aws_subnet.web-private-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:route-table/rtb-0308a4b68a9d46eb7",
            "id": "rtb-0308a4b68a9d46eb7",
            "owner_id": "011528291803",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02aab4f134a2a31ed",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week4-app-private-route-table"
            },
            "tags_all": {
              "Name": "week4-app-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_b",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bastion-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:route-table/rtb-0040224eae239de00",
            "id": "rtb-0040224eae239de00",
            "owner_id": "011528291803",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ba38c310378826b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week4-bastion-public-route-table"
            },
            "tags_all": {
              "Name": "week4-bastion-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:route-table/rtb-07c1df1215f2bbf73",
            "id": "rtb-07c1df1215f2bbf73",
            "owner_id": "011528291803",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ba38c310378826b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week4-public-route-table"
            },
            "tags_all": {
              "Name": "week4-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:route-table/rtb-06a4ab93792f91fcf",
            "id": "rtb-06a4ab93792f91fcf",
            "owner_id": "011528291803",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02aab4f134a2a31ed",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week4-web-private-route-table"
            },
            "tags_all": {
              "Name": "week4-web-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_b",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06aeaaf966ee933c6",
            "route_table_id": "rtb-0308a4b68a9d46eb7",
            "subnet_id": "subnet-09195698c86761de5"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_b",
            "aws_route_table.app-private-route-table",
            "aws_subnet.app-private-b",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-private-subnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7f66bfcbc8feb5f",
            "route_table_id": "rtb-0308a4b68a9d46eb7",
            "subnet_id": "subnet-0725cb0e789143616"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_b",
            "aws_route_table.app-private-route-table",
            "aws_subnet.app-private-c",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032c11eef0970a057",
            "route_table_id": "rtb-0040224eae239de00",
            "subnet_id": "subnet-07555cdcb22206907"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.bastion-public-route-table",
            "aws_subnet.bastion-public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe4ed10fa6790ca9",
            "route_table_id": "rtb-07c1df1215f2bbf73",
            "subnet_id": "subnet-0a9b7214dc3910b17"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087d658742b901df3",
            "route_table_id": "rtb-06a4ab93792f91fcf",
            "subnet_id": "subnet-0252b9f0bae05f5e1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_b",
            "aws_route_table.web-private-route-table",
            "aws_subnet.public-b",
            "aws_subnet.web-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-subnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0666b73e139821ae7",
            "route_table_id": "rtb-06a4ab93792f91fcf",
            "subnet_id": "subnet-0384026055442cc6a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_b",
            "aws_route_table.web-private-route-table",
            "aws_subnet.public-b",
            "aws_subnet.web-private-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:security-group/sg-00ba3232fc422508a",
            "description": "Allowing Inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ba3232fc422508a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 22 Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "week4-bastion-public-security-group",
            "name_prefix": "",
            "owner_id": "011528291803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-public-security-group"
            },
            "tags_all": {
              "Name": "bastion-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-app-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:security-group/sg-0c886e9e28e3368d8",
            "description": "Allowing Web and App Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c886e9e28e3368d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 22 Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allowing port 443 Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040c7e4155894b6b7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allowing port 80 Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040c7e4155894b6b7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "week4-web-app-private-security-group",
            "name_prefix": "",
            "owner_id": "011528291803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "week4-web-private-security-group"
            },
            "tags_all": {
              "Name": "week4-web-private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-elb-security-group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-elb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:security-group/sg-040c7e4155894b6b7",
            "description": "Allowing Web Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040c7e4155894b6b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 443 Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 80 Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "week4-web-elb-public-security-group",
            "name_prefix": "",
            "owner_id": "011528291803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "week4-web-elb-public-security-group"
            },
            "tags_all": {
              "Name": "week4-web-elb-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-046d83044277b9153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:subnet/subnet-09195698c86761de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09195698c86761de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528291803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4-app-private-subnetA"
            },
            "tags_all": {
              "Name": "week4-app-private-subnetA"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:subnet/subnet-0725cb0e789143616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0725cb0e789143616",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528291803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4-app-private-subnetC"
            },
            "tags_all": {
              "Name": "week4-app-private-subnetC"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:subnet/subnet-07555cdcb22206907",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07555cdcb22206907",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011528291803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4-bastion-public-subnetB"
            },
            "tags_all": {
              "Name": "week4-bastion-public-subnetB"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:subnet/subnet-0a9b7214dc3910b17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9b7214dc3910b17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011528291803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4-public-subnetB"
            },
            "tags_all": {
              "Name": "week4-public-subnetB"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:subnet/subnet-0f54f424fe2589353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f54f424fe2589353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528291803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4-public-subnetC"
            },
            "tags_all": {
              "Name": "week4-public-subnetC"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:subnet/subnet-0252b9f0bae05f5e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0252b9f0bae05f5e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528291803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4-web-private-subnetB"
            },
            "tags_all": {
              "Name": "week4-web-private-subnetB"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:subnet/subnet-0384026055442cc6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0384026055442cc6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528291803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4-web-private-subnetC"
            },
            "tags_all": {
              "Name": "week4-web-private-subnetC"
            },
            "vpc_id": "vpc-046d83044277b9153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528291803:vpc/vpc-046d83044277b9153",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0378f7d35934218da",
            "default_route_table_id": "rtb-00210f56fa78fa247",
            "default_security_group_id": "sg-0423214cee5036154",
            "dhcp_options_id": "dopt-07ec5e1c5add270ba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046d83044277b9153",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00210f56fa78fa247",
            "owner_id": "011528291803",
            "tags": {
              "Name": "week4_vpc"
            },
            "tags_all": {
              "Name": "week4_vpc"
            }
          }
        }
      ]
    }
  ]
}